Database abstraction and a bit of OOP

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ dependencies {
     }
     compileOnly 'org.spigotmc:spigot-api:1.17-R0.1-SNAPSHOT'
     implementation 'org.bstats:bstats-bukkit-lite:1.7'
+    
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	
+	testCompileOnly 'org.projectlombok:lombok:1.18.22'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
 
 jar {
